Changed Resource Names to Official Ones Fixed MiniaturizedOpponentField